added additional plugins needed for forwarding logs to a redis queue, and modified fluent.conf to do some formatting and ship logs to redis.

--- a/fluent.conf
+++ b/fluent.conf
@@ -8,14 +8,22 @@
 </source>
 
 <match docker.var.lib.docker.containers.*.*.log>
-  type record_reformer
-  container_id ${tag_parts[5]}
-  tag docker.all
+  type rename_key
+  rename_rule1 log message
 </match>
 
-<match docker.all>
-  type file
-  path /var/log/docker/*.log
-  format json
-  include_time_key true
+<match docker.var.lib.docker.containers.*.*.log.key_renamed>
+  type record_reformer
+  container_id ${tag_parts[5]}
+  tag docker.filtered
 </match>
+
+<match docker.filtered>
+  type redis_store
+  host logging.private
+  port 6379
+  store_type list
+  key logspout
+  format_type json
+  order asc
+</match> 
